[package]
name = "xoriaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
clap = { version = "3.1.18", features = ["derive", "wrap_help"] }
rand = "0.8.5"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
